--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 class="text-center">eduID is unavailable</h1>
         </div>
         <div class="row center-block">
-            <a href="https://xkcd.com"><img src="assets/eduid-fail-snail.png" class="img-responsive" alt="Teh Fail Snail"></a>
+            <a href="https://xkcd.com"><img src="assets/eduid-fail-snail.png" class="img-responsive center-block" alt="Teh Fail Snail"></a>
             <! -- Thanks to Todd Barnard who made the fail snail public domain, https://www.flickr.com/photos/ronin691/2634356788 -->
         </div>
         <div class="row center-block">
