--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="sv-SE">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Eduid</title>
+    <title>eduID</title>
     <link rel='stylesheet' id='bootstrap-css' href='assets/bootstrap-3.3.7.min.css' type='text/css' media='all' />
     <link rel='stylesheet' id='eduid-style-main-css' href='assets/style.css' type='text/css' media='all' />
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
